--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "This is the general stack and what each technology does.",
   "main": "index.js",
-  "engines" {
-    "node": "8.8.1",
-    "npm": "5.0.3"
+  "engines": {
+    "node": "v15.14.0",
+    "npm": "7.7.6"
   },
   "scripts": {
     "start": "node index.js"
