--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "passport": "^0.4.1",
-    "passport-google": "^0.3.0"
+    "passport-google": "^0.3.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
