--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Edgar-Saavedra/node_with_react_fullstack#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-google": "^0.3.0",
     "passport-google-oauth20": "^2.0.0"
